<resources>
    <string name="app_name">eXeReader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eXeReader</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Details</string>
    <string name="menu_ayuda">Help</string>
    <string name="autor">Authorship</string>
    <string name="descripcion">Description</string>
    <string name="Ayuda">Help</string>
    <string name="wha">WhatsApp</string>
    <string name="correo">Email</string>
    <string name="licencia">License</string>
    <string name="te">Telegram</string>
    <string name="otros">Others</string>
    <string name="floatingButton">Email</string>
    <string name="ema">Email</string>
    <string name="nVersion">1.0</string>
    <string name="imagenlogo">pictureLogo</string>
    <string name="enviar">Send</string>
    <string name="menu_home">Beginning</string>
    <string name="menu_slideshow">Options</string>
    <string name="menu_contacto">Contact</string>
    <string name="button">Find file</string>
    <string name="text_archivos">Recent files list</string>
    <string name="tituloAyuda">Help</string>
    <string name="titulo">Title</string>
    <string name="imagen">Project image</string>
    <string name="anterior">Previous</string>
    <string name="siguiente">Next</string>
    <string name="llama">"Call "</string>
    <string name="titu">- Data of the selected project -</string>
    <string name="ver">Version </string>
    <string name="p">Score</string>
    <string name="idioma">Language</string>
    <string name="tit">Suggestions</string>
    <string name="editable">Editable</string>
    <string name="borrarDatos">Delete data</string>
    <string name="logo">logo</string>
    <string name="compartir">Share by</string>
    <string name="borrar">Delete options</string>
    <string name="borrarApp">Delete application project</string>
    <string name="opciones">Options on the selected project</string>
    <string name="sobre_la_aplicaci_n">Application</string>
    <string name="sobre_el_proyecto">About project</string>
    <string name="comentario">Remark</string>
    <string name="contenido">Selected content: </string>
    <string name="menu_creditos">Credits</string>
    <string name="nav_sugerencias">Suggestions</string>
</resources>