<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_arrow_forward_24"
            android:title="@string/menu_home" />

    <item android:title="@string/contenido">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_gallery"
                    android:enabled="false"
                    android:icon="@drawable/ic_outline_info_24"
                    android:title="@string/menu_gallery" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:enabled="false"
                    android:icon="@drawable/ic_baseline_construction_24"
                    android:title="@string/menu_slideshow" />
            </group>
        </menu>
    </item>
    <item android:title="@string/sobre_la_aplicaci_n">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_ayuda"
                    android:icon="@drawable/ic_baseline_help_outline_24"
                    android:title="@string/menu_ayuda" />
                <item
                    android:id="@+id/nav_creditos"
                    android:icon="@drawable/ic_baseline_filter_tilt_shift_24"
                    android:title="@string/menu_creditos" />
                <item
                    android:id="@+id/nav_sugerencias"
                    android:icon="@drawable/ic_baseline_border_color_24"
                    android:title="@string/nav_sugerencias" />
            </group>
        </menu>
    </item>
</menu>