<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.sugerencias.SugerenciasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:text="@string/ema"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:contentDescription="@string/floatingButton"
            android:focusable="true"
            android:foregroundGravity="top"
            android:src="@drawable/icon_email"
            app:backgroundTint="@color/verde" />

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/p"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hapticFeedbackEnabled="false"
            android:progressBackgroundTint="@color/grisVerdoso" />

        <TextView
            android:id="@+id/comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/comentario"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/comentarioEscrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="12sp" />

        <Button
            android:id="@+id/enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenlogo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="60dp"
        android:contentDescription="@string/imagenlogo"
        android:src="@drawable/exelearning" />

</LinearLayout>