<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".ui.opciones.OpcionesFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/opciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/compartir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="27dp"
        android:text="@string/compartir"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/wha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="?attr/colorPrimary"
            app:icon="@drawable/icon_whatsapp"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="?attr/colorPrimary"
            app:icon="@drawable/icon_send"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="?attr/colorPrimary"
            app:icon="@drawable/icon_share"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF" />

    </LinearLayout>

    <TextView
        android:id="@+id/borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:text="@string/borrar"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center|top">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/borrarApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="?attr/colorPrimary"
            app:icon="@drawable/icon_delete"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF" />

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>